kube/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sf-web-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sf-web
  template:
    metadata:
      labels:
        app: sf-web
    spec:
      containers:
      - name: sf-web
        image: khaledhamam/skillfuze-web:latest
        resources:
          limits:
            memory: "128Mi"
            cpu: "300m"
        ports:
        - containerPort: 3001
