kube/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sf-backend-svc
spec:
  type: ClusterIP
  selector:
    app: sf-backend
  ports:
  - port: 8080
    targetPort: 3000
