kube/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - skillfuze.com
    secretName: tls-secret
  rules:
    - host: www.skillfuze.com
      http:
        paths:
        - backend:
            serviceName: sf-web-svc
            servicePort: 9000
    - host: api.skillfuze.com
      http:
          paths:
          - backend:
              serviceName: sf-backend-svc
              servicePort: 8080
